--- a/.github/workflows/test-manual.yml
+++ b/.github/workflows/test-manual.yml
@@ -25,18 +25,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Git Repo Sync
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - uses: wangchucheng/git-repo-sync@v0.1.0
-      with:
-        # Such as https://github.com/wangchucheng/git-repo-sync.git
-        # target-url: ${{ secrets.TARGET_URL }}
-        target-url: 'git@github.com:w-friends/wknd.git'
-        # Such as wangchucheng
-        #target-username: ${{ secrets.TARGET_USERNAME }}
-          # You can store token in your project's 'Setting > Secrets' and reference the name here. Such as ${{ secrets.ACCESS\_TOKEN }}
-        #target-token: ${{ secrets.TARGET_TOKEN }}
+    - name: Send greeting
+      run: echo "Hello ${{ GITHUB_TOKEN }}"
     # Runs a single command using the runners shell
     - name: Send greeting
       run: echo "Hello ${{ inputs.name }}"
