--- a/.github/workflows/sync-test-2.yml
+++ b/.github/workflows/sync-test-2.yml
@@ -18,8 +18,8 @@ jobs:
       uses: repo-sync/github-sync@v2
       with:
         source_repo: ""
-        source_branch: ""
-        destination_branch: ""
+        source_branch: "*"
+        destination_branch: "*"
         github_token: ${{ secrets.GITHUB_TOKEN }}    # Runs a single command using the runners shell
     - name: Send greeting
       run: echo "Hello ${{ inputs.name }}"
