--- a/.github/workflows/sync-test-2.yml
+++ b/.github/workflows/sync-test-2.yml
@@ -11,15 +11,5 @@ jobs:
   repo-sync:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-      with:
-        persist-credentials: false
-    - name: repo-sync
-      uses: repo-sync/github-sync@v2
-      with:
-        source_repo: ""
-        source_branch: "*"
-        destination_branch: "*"
-        github_token: ${{ secrets.GITHUB_TOKEN }}    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
+    - name: Foo is bar - Sync remote repository from another remote repository
+      run: gh repo sync wfriends/wknd
