--- a/.github/workflows/sync-test-2.yml
+++ b/.github/workflows/sync-test-2.yml
@@ -13,3 +13,8 @@ jobs:
     steps:
     - name: Foo is bar - Sync remote repository from another remote repository
       run: gh repo sync wfriends/wknd
+      env:
+        GH_TOKEN: ${{ github.token }}
+        OWNER: ${{ github.repository_owner }}
+        REPO: ${{ github.repository.name }}
+
