--- a/.github/workflows/sync-test-2.yml
+++ b/.github/workflows/sync-test-2.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Foo is bar - Sync remote repository from another remote repository
-      run: gh repo sync wfriends/wknd
+      run: gh repo sync w-friends/wknd
       env:
         GH_TOKEN: ${{ github.token }}
         OWNER: ${{ github.repository_owner }}
