--- a/.github/workflows/sync-test-2.yml
+++ b/.github/workflows/sync-test-2.yml
@@ -16,5 +16,5 @@ jobs:
       env:
         GH_TOKEN: ${{ github.token }}
         OWNER: ${{ github.repository_owner }}
-        REPO: ${{ github.repository.name }}
+        REPO: ${{ github.repository }}
 
