--- a/.github/workflows/sync-test-2.yml
+++ b/.github/workflows/sync-test-2.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Foo is bar - Sync remote repository from another remote repository
-      run: gh repo sync w-friends/wknd
+      run: gh repo sync w-friends/wknd --source cwoeltge/wknd
       env:
         GH_TOKEN: ${{ github.token }}
         GH_REPO: ${{ github.repository }}
